# cellmates_speedup

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  tree_plot.R
reproducibility/: demo.h5ad
reproducibility/experiments/: cm_dice_medicc2_comparisons.py  cnasim_test.py  quadruplet_accuracy.py  rectree_vs_nj_dataplot.py  synth_performance.py
reproducibility/plots/: correct_csv.sh  performance_plots.Rmd  plot_dice_benchmark_dat.ipynb  quadruplet_accuracy_plots.r  tree_plot.R
reproducibility/workflows/cnasim_makedata/: README.md
reproducibility/workflows/cnasim_performance/: config.yaml  demo.ipynb  demo.yaml  run.smk
reproducibility/workflows/noisy_simul/: Snakefile  config.yaml  prepare_anndata.py
reproducibility/workflows/quadruplet_benchmark/: README.md  Snakefile  _common_rules.smk
scripts/: data_exploration.ipynb  diagnostics_plot.ipynb  forward_backward_speed_test.py  mm03.ipynb  ov110.ipynb  ov125.ipynb  read_scicone_output.ipynb  run_real_data.py  run_scicone_anndata.py  run_spectrum_ov.py  run_spectrum_ov2.py
src/: main.py
src/cellmates/: .gitignore  __init__.py  cellmates_架构与算法详解.md
src/cellmates.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cellmates/common_helpers/: README.md  cnasim_data.py
src/cellmates/inference/: em.py  neighbor_joining.py  pipeline.py
src/cellmates/models/: obs.py  quadruplet.py
src/cellmates/other_methods/: dice_api.py  medicc2_api.py
src/cellmates/simulation/: datagen.py
src/cellmates/utils/: generalized_sankoff_algorithm.py  hmm.py  math_utils.py  profiling.py  testing.py  tree_utils.py  visual.py
src/experiments/: cnasim_test.py  quadruplet_accuracy.py  synth_performance.py
src/inference/: cellmates.py  em.py  neighbor_joining.py
src/models/: copy_tree.py  obs.py  quadruplet.py  urn_observational_model.py
src/models/evo/: __init__.py
src/models/evolutionary_models/: __init__.py  copy_tree.py  jukes_cantor_breakpoint.py
src/models/observation_models/: __init__.py  cell_baseline_and_precision_model.py  normalized_read_counts_models.py  read_counts_models.py
src/notebooks/: synth_data_tut.ipynb
src/simulation/: datagen.py
src/utils/: math_utils.py  tree_utils.py  visual.py
tests/: test_hmm.py
tests/test_inference/: test_NJ.py  test_cellmates.py  test_checkpoint.py  test_em.py
tests/test_inference/test_quadruplet/: test_quadruplet.py
tests/test_models/: test_hmm.py
tests/test_models/test_evo_models/: test_copy_tree_model.py  test_evo.py  test_likelihood.py  test_urn_observational_model.py
tests/test_models/test_obs_model/: test_jittercopy.py  test_negbinom.py  test_normal.py  (+1 more)
tests/test_other_methods/: test_dice.py  test_medicc2.py
tests/test_simulation/: test_datagen.py  test_simulation_evo_model.py
tests/test_utils/: test_generalized_sankoff_algorithm.py  test_hmm.py  test_math_utils.py  test_tree_utils.py  test_visual.py
tests/tests_inference/: test_NJ.py  test_em.py
tests/tests_models/: test_copy_tree_model.py  test_urn_observational_model.py
(+51 files in other folders)
